# contracts

./: Cargo.toml
credential_registry/: Cargo.toml  Makefile
credential_registry/src/: lib.rs  test.rs
credential_registry/test_snapshots/test/: test_get_admin.1.json  test_register_and_verify.1.json  test_revoke.1.json  test_revoke_without_admin_auth_panics.1.json
credit_score/: Cargo.toml
credit_score/src/: lib.rs  test.rs
credit_score/test_snapshots/test/: test_update_and_get_score.1.json  test_update_score_without_admin_auth_panics.1.json
