[workspace]
members = [
  "credit_score",
  "credential_registry",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "26", features = ["alloc"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
