[package]
name = "credit-score"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.7.6", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "21.7.6", features = ["testutils", "alloc"] }

[features]
testutils = ["soroban-sdk/testutils"]
